--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,3 +28,10 @@
   import_tasks: setup_agent_service.yml
   tags:
     - nria_setup_service
+
+- name: setup logging service
+  import_tasks: setup_logging.yml
+  tags:
+    - nria_setup_logging
+  when:
+    - nrinfragent_logging is defined
